@@ -30,8 +30,9 @@ Isabelle2017 yet (using the "isabelle imports" tool).
 * Windows and Cygwin is for x86_64 only. Old 32bit platform support has
 been discontinued.
 
-* Command-line tool "isabelle build" supports option -B for base
-sessions: all descendants are included.
+* Command-line tool "isabelle build" supports new options:
+  - option -B NAME: include session NAME and all descendants
+  - option -S: only observe changes of sources, not heap images
 
 
 New in Isabelle2017 (October 2017)
